# claude_code_template

./: .czrc  .gitignore  CHANGELOG.md  CLAUDE.md  pyproject.toml
.claude/: MEMORY.md  settings.json
.claude/rules/: SDD协议.md  api-design.md  git-workflow.md  python-coding.md  testing.md
.claude/skills/helm-chart-builder/: SKILL.md
.claude/skills/helm-chart-builder/references/: chart-patterns.md  values-design.md
.claude/skills/helm-chart-builder/scritps/: chart_analyzer.py  values_validator.py
.claude/skills/python-expert/: SKILL.md
src/: __init__.py
